--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "require": {
     "magento/framework": ">=102.0.2 <103.0.7",
     "magento/module-store": ">=101.0.2 <=101.1.6",
-    "bold-commerce/module-checkout": "1.1.23"
+    "bold-commerce/module-checkout": ">=1.1.23"
   },
   "license": [
     "MIT"
