Update package description

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "bold-commerce/module-checkout-flow-paypal",
   "version": "0.0.1",
-  "description": "Bold Checkout PayPal Flow Integration for Magento 2",
+  "description": "Bold Checkout PayPal Flow Integration for Adobe Commerce",
   "type": "magento2-module",
   "require": {
     "magento/framework": ">=102.0.2 <103.0.7",
