--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "type": "magento2-module",
   "require": {
     "magento/framework": ">=102.0.2 <103.0.7",
-    "magento/module-store": ">=101.0.2 <=101.1.6",
+    "magento/module-store": ">=101.0.2 <101.1.7",
     "bold-commerce/module-checkout": "^1.1.24"
   },
   "license": [
